<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserManual">

    <TextView
        android:id="@+id/usr_man_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_manual_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usr_man_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/user_manual_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usr_man_label" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/command_words"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usr_man_text" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usr_man_com_insert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_insert_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_type_verb" />

                <TextView
                    android:id="@+id/usr_man_com_insert_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_insert_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usr_man_com_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_delete_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_man_com_delete_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_type_verb" />

                <TextView
                    android:id="@+id/usr_man_com_delete_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_delete_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usr_man_com_kick_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_kick_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_man_com_drum_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_type_drumname" />

                <TextView
                    android:id="@+id/usr_man_com_drum_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_kick_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usr_man_com_snare_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_snare_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_man_com_drum_type_snare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_type_drumname" />

                <TextView
                    android:id="@+id/usr_man_com_drum_text_snare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_snare_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usr_man_com_hihat_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_hihat_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_man_com_drum_type_hihat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_type_drumname" />

                <TextView
                    android:id="@+id/usr_man_com_drum_text_hihat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_hihat_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usr_man_com_hihat_open_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_hihat_open_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_man_com_drum_type_hihat_open"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_type_drumname" />

                <TextView
                    android:id="@+id/usr_man_com_drum_text_hihat_open"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_hihat_open_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usr_man_com_beat_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_beat_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_man_com_drum_type_beat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_type_beatpos" />

                <TextView
                    android:id="@+id/usr_man_com_drum_text_beat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_beat_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usr_man_com_undo_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_undo_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_man_com_undo_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_undo_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usr_man_com_tempo_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_tempo_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_man_com_tempo_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:text="@string/usr_man_com_tempo_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>